@@ -9,9 +9,6 @@ Backlog {
 	* Platform desktop SDL
 		* Text input not working on gui. Could this be Raylib issue?
 		* Haptic functions.
-	* Text
-		* Text codepoints management functions (unicode characters)? Could be usefull for luajit.
-		* Some of the Text strings management functions could be easier to use than the Lua ones.
 	* Audio
 		* AudioStream.
 	* Core
