@@ -65,6 +65,7 @@ DETAILED CHANGES:
 	- CHANGE: Raygui lib changed term element to control to correspond raylib naming.
 	- ADDED: LoadBufferFromString, LoadWaveFromMemory and LoadMusicStreamFromMemory.
 	- CHANGE: GetGlyphInfo and GetGlyphInfoByIndex return glyphInfo as lightuserdata.
+	- ADDED: TextInsert and TextSplit.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.6.0		Using Raylib 4.5
